# claw-code

./: README.md  claw-使用指南.md
rust/: .gitignore  Cargo.toml
rust/.claw/sessions/: session-1775491274756-0.jsonl  session-1775491351568-0.jsonl  session-1775491634988-0.jsonl
rust/crates/api/: Cargo.toml  providers.example.toml
rust/crates/api/src/: client.rs  config.rs  error.rs  lib.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/rusty-claude-cli/src/: main.rs
