[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
toml.workspace = true

[lints]
workspace = true
